@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -115,6 +115,7 @@ public class LogGeneratedClassesTest extends LUtils {
     public void testNotLogging() {
         TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                "-cp", ".",
+                               "-Djava.security.manager=allow",
                                "com.example.TestLambda");
         tr.assertZero("Should still return 0");
     }
@@ -124,6 +125,7 @@ public class LogGeneratedClassesTest extends LUtils {
         assertTrue(Files.exists(Paths.get("dump")));
         TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                "-cp", ".",
+                               "-Djava.security.manager=allow",
                                "-Djdk.internal.lambda.dumpProxyClasses=dump",
                                "com.example.TestLambda");
         // 2 our own class files. We don't care about the others
@@ -141,9 +143,11 @@ public class LogGeneratedClassesTest extends LUtils {
         assertFalse(Files.exists(Paths.get("notExist")));
         TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                "-cp", ".",
+                               "-Djava.security.manager=allow",
                                "-Djdk.internal.lambda.dumpProxyClasses=notExist",
                                "com.example.TestLambda");
         assertEquals(tr.testOutput.stream()
+                                  .filter(s -> !s.contains("setSecurityManager is deprecated"))
                                   .filter(s -> s.startsWith("WARNING"))
                                   .peek(s -> assertTrue(s.contains("does not exist")))
                                   .count(),
@@ -156,9 +160,11 @@ public class LogGeneratedClassesTest extends LUtils {
         assertTrue(Files.isRegularFile(Paths.get("file")));
         TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                "-cp", ".",
+                               "-Djava.security.manager=allow",
                                "-Djdk.internal.lambda.dumpProxyClasses=file",
                                "com.example.TestLambda");
         assertEquals(tr.testOutput.stream()
+                                  .filter(s -> !s.contains("setSecurityManager is deprecated"))
                                   .filter(s -> s.startsWith("WARNING"))
                                   .peek(s -> assertTrue(s.contains("not a directory")))
                                   .count(),
@@ -214,9 +220,11 @@ public class LogGeneratedClassesTest extends LUtils {
 
             TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                    "-cp", ".",
+                                   "-Djava.security.manager=allow",
                                    "-Djdk.internal.lambda.dumpProxyClasses=readOnly",
                                    "com.example.TestLambda");
             assertEquals(tr.testOutput.stream()
+                                      .filter(s -> !s.contains("setSecurityManager is deprecated"))
                                       .filter(s -> s.startsWith("WARNING"))
                                       .peek(s -> assertTrue(s.contains("not writable")))
                                       .count(),
@@ -232,6 +240,7 @@ public class LogGeneratedClassesTest extends LUtils {
         assertTrue(Files.exists(Paths.get("dumpLong")));
         TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
                                "-cp", ".",
+                                "-Djava.security.manager=allow",
                                "-Djdk.internal.lambda.dumpProxyClasses=dumpLong",
                                longFQCN);
         assertEquals(tr.testOutput.stream()
